[package]
name = "chip-8_emu"
version = "0.1.0"
authors = ["NinVoido"]
edition = "2021"
[features]

[dependencies]
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = { version = "0.19", default-features = false, features = ["links"] }
pixels = "0.10.0" 
winit = "0.27"
winit_input_helper = "0.13"
rand = "0.8.5"
rfd = "0.10"
egui_extras = "0.19"
rodio = "0.16.0"
